# dmitryhd_code

./: code_git_commit.sh  vimnotes
R/: R
mipt_smb_search/: \  backend.py  indexer.conf
mipt_smb_search/.svn/: entries
mipt_smb_search/fastsmbsearch/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.status  configure  configure.in  includes.h
mipt_smb_search/fastsmbsearch/autom4te.cache/: output.0  requests  traces.0  traces.1
mipt_smb_search/fastsmbsearch/doc/: faq.html  install.html  internals.html  smbgate.html
mipt_smb_search/fastsmbsearch/fsearch/: Makefile  Makefile.am  Makefile.in  cacheitem.h  cachingtest.h  classify.cpp  classify.h  fileread.cpp  fileread.h  fileset.cpp  fileset.h  hash.h  hostdata.cpp  hostdata.h  hostset.cpp  hostset.h  lex.yy.cpp  logger.cpp  logger.h  main.cpp  memalloc.cpp  memalloc.h  parenttest.cpp  parenttest.h  parser.cpp  parser.h  qcache.cpp  qcache.h  qlang.l  qlang.output  qlang.tab.cpp  qlang.tab.hpp  qlang.ypp  record.cpp  record.h  regexp.cpp  regexp.h  server.cpp  server.h  statefilter.h  (+24 more)
mipt_smb_search/fastsmbsearch/fsearch/.deps/: fsearch-classify.Po  fsearch-fileread.Po  fsearch-logger.Po  fsearch-memalloc.Po  fsearch-record.Po  fsearch-strheap.Po  fsearch-swapalloc.Po  fsearch-swapfile.Po  fsearch-test.Po  fsearch-uppercase.Po  fsearch-wordhash.Po  fsearch-wordsplit.Po
mipt_smb_search/fastsmbsearch/html/: Common.pm  SMBConf.pm  advanced.pl  fastsearch.pl  fsearch_en.tmpl  fsearch_ru.tmpl  index.pl  index_en.html  index_ru.html  ipcheck.pl  rescanme.pl  serverstat.pl  setpref.html  setpref.pl  showdir.pl  shownet.pl  shownet_en.tmpl  shownet_ru.tmpl  showwkg.pl  showwkg_en.tmpl  showwkg_ru.tmpl  smbgate.pl  startup.pl  stat.pl  stat_en.tmpl  stat_ru.tmpl  style.css  top20.pl
mipt_smb_search/fastsmbsearch/scripts/: check.sh  checkstat.py  db.sql  deadstat.py  dns2hosts.py  fcon.py  fsearch.sh.sample  ftpspider.pl  hostsync.py  mycrontab  netserver.py  rescand.py  smbsearch.conf  smbsearch.py  startfsmb.py  test.py  tryadd.pl
mipt_smb_search/fastsmbsearch/smbclient/: client.c  client_patch.c.orig  samba.patch
mipt_smb_search/old/: backend_walk_old.py  dirsearch.py  engine.py  filefinder.py  indexer.py  mount.smb.py  mount_smb.py  print_page.py  search.py  vim.vim
mipt_smb_search/svn/: backend.py
mpi/: time.cpp
mpi/task1/: task1_n  task1_o  task1_opt_backup.cpp  task_1.cpp  task_1_summ.cpp  task_1_summ_optim_factor.cpp
mpi/task2/: a.out  plot.graph  task2  task2.cpp  task2_jenia.c  task2_s  task2_single.cpp  task2_ura  task2_ura.cpp
python/: pyqtexample.py  simpleHTTPserver.py  tkexample.py
python/speed_test/: callgrind.out.7200  first.py  hello  (+9 more)
sem_3/: 1  2  cross.c  detail_assembling  detail_assembling.c  mmap_1  mmap_1.c  mmap_2  mmap_2.c  myls  myls.c  new.c  notes.txt  sigusr.c  sigusr_ex.sh  sigusr_recv  sigusr_recv.c  sigusr_send  sigusr_send.c  task9  task_9.c  template.c  template.h
(+326 files in other folders)
